Start project with Next.js and Tailwind CSS. Changes: - Update theme colors - Create the layout of the Home page - Add social media icons with URLs - Add responsiveness to the Home page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,14 +16,22 @@
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.joy_gradient {
+  background: linear-gradient(to right, #40e0d0, #ff8c00, #ff0080);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  position: relative;
+}
+
+.joy_gradient.underline::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(to right, #40e0d0, #ff8c00, #ff0080);
 }
 
 @layer utilities {
