--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,23 +26,20 @@
   bottom: 0;
   width: 100%;
   height: 2px;
-  background: linear-gradient(to right, #40e0d0, #ff8c00, #ff0080);
+  background: var(--gradient);
 }
 
 .gradient--border:hover {
   border: solid 1px transparent;
-  background-image: linear-gradient(
-      theme("colors.gray.dark"),
-      theme("colors.gray.dark")
-    ),
+  background-image: linear-gradient(var(--gray-dark), var(--gray-dark)),
     var(--gradient);
   background-origin: border-box;
   background-clip: padding-box, border-box;
 }
 
 .gradient--border:active {
-  border: solid 1px theme("colors.gray.light");
-  color: theme("colors.gray.dark");
-  background-color: theme("colors.gray.light");
+  border: solid 1px var(--gray-light);
+  color: var(--gray-dark);
+  background-color: var(--gray-light);
   background-image: none;
 }
