Update layout add and sticky navbar - Use flex instead of grid in the layout - Add a new TailwindCSS plugin to sort classes

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -73,6 +73,7 @@
   background-color: var(--grayDark);
   border: 1px solid var(--grayLight);
   border-radius: 50%;
+  z-index: 0;
 }
 
 .timeline-event:first-child::before {
