Minor fixes - Add a constant to handle what button use the grandient border - Split code into functions - Add a better handling for dates in the Experience component - Remove unescaped entities

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -46,8 +46,8 @@
 }
 
 .gradient--border:active,
-.active,
-.active:hover {
+.active-btn,
+.active-btn:hover {
   border: solid 1px var(--grayLight);
   color: var(--grayDark);
   background-color: var(--grayLight);
